# VEK-Api

./: .gitignore  Cargo.toml
prisma/: schema.prisma  veklauncher.db  veklauncher.db-journal
prisma-cli/: Cargo.toml
prisma/migrations/20240812121839_user/: migration.sql
prisma/migrations/20240812133957_update_user/: migration.sql
prisma/migrations/20240813124655_torrent/: migration.sql
src/: main.rs  prisma.rs  server.rs
src/middleware/: auth.rs  games.rs  mod.rs
src/model/: dto.rs  error.rs
src/modules/: helpers.rs  mod.rs
src/modules/constants/: .gitignore  mod.example.rs
src/modules/formatters/: mod.rs
src/modules/helpers/: mod.rs
src/modules/providers/: mod.rs
src/modules/providers/dodi/: mod.rs
src/modules/providers/emperss/: mod.rs
src/modules/providers/fitgirl/: mod.rs
src/modules/providers/gog/: mod.rs
src/modules/providers/kaoskrew/: mod.rs
src/modules/providers/onlinefix/: mod.rs
src/modules/providers/tinyrepacks/: mod.rs
src/modules/providers/xatab/: mod.rs
src/route/: auth.rs  games.rs  health_check.rs  mod.rs  torrent.rs  user.rs
src/service/: auth.rs  games.rs  mod.rs  torrent.rs  user.rs
