[workspace]
members = [".", "prisma-cli"]

[package]
name = "vek-api"
version = "0.0.1"
description = "Api for VEK Launcher"
authors = ["Markov Emil"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["full"] }
reqwest = { version = "0.12.4", features = ["json", "blocking"] }
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11", default-features = false, features = [
  "migrations",
  "mocking",
  "sqlite",
  "sqlite-create-many",
] }
actix-http = "3.7.0"
actix-identity = "0.7.1"
actix-rt = "2.9.0"
actix-files = "0.6"
dirs = "5.0.1"
actix-session = { version = "0.9.0", features = ["cookie-session"] }
actix-web = { version = "4.6.0" }
actix-service = "2.0.2"
argon2 = "0.5.3"
chrono = "0.4.38"
env_logger = "0.11.3"
log = "0.4.21"
tracing = "0.1.40"

[dependencies.rusqlite]
version = "0.25.4"
features = ["bundled"]

[profile.release]
debug = true
