[package]
name = "prisma-cli"
version = "0.0.0"
edition = "2021"

[features]
sqlite = [
  "prisma-client-rust-cli/sqlite",
  "prisma-client-rust-cli/sqlite-create-many",
]

[dependencies]
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11", default-features = false, features = [
  "migrations",
  "sqlite"
] }